--- a/css/screens/login.css
+++ b/css/screens/login.css
@@ -30,7 +30,7 @@
 }
 
 #login-form input::placeholder {
-  color: rgba(0, 0, 0, 0.4);
+  color: var(--main-color);
   font-size: 19px;
 }
 #login-form input:focus {
