오류 수정, 애니메이션 추가
상태 바 배경 컬러  수정
로그인 시 애니메이션 추가

--- a/css/screens/chat.css
+++ b/css/screens/chat.css
@@ -4,7 +4,7 @@
 }
 
 #chat-screen .alt-header,
-.status-bar {
+#chat-screen .status-bar {
   position: fixed;
   width: 100%;
   box-sizing: border-box;
