--- a/css/components/screen-header.css
+++ b/css/components/screen-header.css
@@ -20,3 +20,15 @@
   right: 18px;
   margin: 0;
 }
+
+@keyframes rotateCog {
+  from {
+    transform: none;
+  }
+  to {
+    transform: rotateZ(360deg);
+  }
+}
+.screen-header__icon .fa-cog:hover {
+  animation: rotateCog 2s linear infinite;
+}
