--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -86,12 +86,30 @@
   margin-left: 5px;
   font-size: 10px;
 }
-
-.open-post__photo {
-  position: relative;
-}
 .open-post__heart-count i {
   font-size: 10px;
+}
+
+@keyframes heartBeat {
+  0% {
+    color: white;
+    transform: none;
+  }
+  50% {
+    color: tomato;
+    transform: scale(1.3);
+  }
+  100% {
+    color: white;
+    transform: none;
+  }
+}
+.open-post__heart-count:hover i {
+  will-change: transform;
+  animation: heartBeat 1s linear infinite;
+}
+.open-post__photo {
+  position: relative;
 }
 
 .open-post__border {
