--- a/css/screens/find.css
+++ b/css/screens/find.css
@@ -33,6 +33,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.open-post:last-child {
+  margin-top: 10px;
+}
 .open-post__title {
   font-weight: 600;
   margin-bottom: 7px;
